# PX4-SITL_gazebo-classic

./: CMakeLists.txt
models/rblimp/: CMakeLists.txt  deps.txt  model.config  package.xml  rblimp.sdf  rblimp1.sdf  rblimp_old.sdf  rblimp_ref.sdf
models/rblimp/blimp_gazebo_plugin/dynamicvolume/: CMakeLists.txt
models/rblimp/blimp_gazebo_plugin/dynamicvolume/src/: dynamicvolume_plugin.cpp  dynamicvolume_plugin.hpp
models/rblimp/blimp_gazebo_plugin/finliftdrag/: CMakeLists.txt
models/rblimp/blimp_gazebo_plugin/finliftdrag/src/: finliftdrag_plugin.cpp  finliftdrag_plugin.hpp
models/rblimp/blimp_gazebo_plugin/normwind/: CMakeLists.txt
models/rblimp/blimp_gazebo_plugin/normwind/src/: normwind_plugin.cpp  normwind_plugin.hpp
models/rblimp/blimp_gazebo_plugin/rotors_gazebo_plugins/: CMakeLists.txt  package.xml  rblimp.sdf
models/rblimp/blimp_gazebo_plugin/rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_motor_model.h  gazebo_ros_interface_plugin.h
models/rblimp/blimp_gazebo_plugin/rotors_gazebo_plugins/msgs/: CommandMotorSpeed_old.proto
models/rblimp/blimp_gazebo_plugin/rotors_gazebo_plugins/src/: gazebo_ros_interface_plugin.cpp  gazebo_ros_interface_plugin_old.cpp
models/rblimp/launch/: blimp_only_gcshitl.launch
models/rblimp/script/: launch.sh  xacro2sdf.sh
models/rblimp/urdf/: blimp.urdf  blimp_base.xacro  blimp_new.urdf  description_link.xacro  description_plugin.xacro  description_property.xacro  plugin_physics.xacro
